# Specto

./: #splash.html#  .gitignore  README.md  SndFile.h  index.html  main.js  package-lock.json  package.json  renderer.html  splash.html  splash.html~
Cing Sound-darwin-x64/Cing Sound.app/Contents/: Info.plist
Cing Sound-darwin-x64/Cing Sound.app/Contents/Frameworks/Cing Sound Helper EH.app/Contents/: Info.plist
Cing Sound-darwin-x64/Cing Sound.app/Contents/Frameworks/Cing Sound Helper NP.app/Contents/: Info.plist
Cing Sound-darwin-x64/Cing Sound.app/Contents/Frameworks/Cing Sound Helper.app/Contents/: Info.plist
Cing Sound-darwin-x64/Cing Sound.app/Contents/Resources/app/: index.html  index.html~  main.js  main.js~  package.json  renderer.html  renderer.html~  splash.html
Cing Sound-darwin-x64/Cing Sound.app/Contents/Resources/app/cpp/: AsyncSPG.cc  GetDataPointer.cc  SPGSource.cc  SndFile.h  (+9 more)
cpp/: AsyncSPG.cc~  GetDataPointer.cc  GetDataPointer.cc~  Main.cpp  SPG.h  SPGReader.h  SPGWrapper.cc  SPGWrapper.h  SndFile.h  SpectrogramGenerator.cpp  SpectrogramGenerator.hpp  binding.gyp  binding.gyp~  build.sh  test.cpp  test.js  window.cpp  window.hpp
cpp/lib/: CMakeCache.txt  CMakeLists.txt  CMakeLists.txt~  Makefile  cmake_install.cmake  libSndReader.dylib  libSpectrogram.dylib
cpp/lib/src/: SndFile.c  Spectrogram.cpp  Spectrogram.h  config.h  main.cpp
css/: page.css
js/: audio.js  eventHandlers.js  eventHandlers.js~  gl.js  globals.js  legend.js  legend.js~  main.js  matrix.js  panzoom.js  time.js~  ui.js  ui.js~  xAxis.js  xAxis.js~  yAxis.js  yAxis.js~
(+21 files in other folders)
